# RobotFramework

Richard-RobotFrameworkTestProject/: pyproject.toml
Richard-RobotFrameworkTestProject/Libraries/: ConfigReader.py
Richard-RobotFrameworkTestProject/Output/: log.html  output.xml  report.html
Richard-RobotFrameworkTestProject/Resources/: browser.resource  db.resource  initialConfiguration.resource  requests.resource  resource.resource  selenium.resource  variables.resource
Richard-RobotFrameworkTestProject/Tests/: CR9K-23224.robot  Connect Database.robot  invalid_login.robot  valid_login.robot
Richard-RobotFrameworkTestProject/Tests/1.5.2 User logon/: CR9K-266260.robot  CR9K-266262.robot  CR9K-266270.robot  CR9K-267160.robot  CR9K-267447.robot
Richard-RobotFrameworkTestProject/Tests/1.5.3 User logoff/: CR9K-266271.robot  CR9K-266303.robot  CR9K-266318.robot
Richard-RobotFrameworkTestProject/Tests/Informal tests/: Connect Database.robot  invalid_login.robot  valid_login.robot
Richard-RobotFrameworkTestProject/data/: users_csx_bbdd.cfg
Richard-RobotFrameworkTestProject/results/: log.html  output.xml  playwright-log-1748252929015625900.txt  playwright-log.txt  report.html
