[project]
name = "robotframeworktestproject"
version = "0.1.0"
description = ""
authors = [
    {name = "Marina Castillo Sanchez",email = "marina.castillosanchez@duagon.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "robotframework (>=7.2.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
